# vaf-alpha

./: .cache  .gitignore  README.md  low.opus  pyproject.toml  tool-calling.excalidraw
docs/diagrams/: threads.excalidraw  tool-calling.excalidraw
sounds/: README.md
src/: agent.py  asr.py  config.py  config_skills.py  context.py  example.py  experiments___.py  llm.py  main.py  mic.py  provider_api.py  sounds.py  tts.py  utils.py
src/asr/: mistral.py
src/kws/: openww.py  porcupine.py
src/llm/: _base.py  base.py  cerebras.py  openrouter.py
src/skills/: README.md  _base.py  _safety.py  _security.py  _skill_usage.py  calendar_ics.py  dateandtime.py  memory.py  ocr.py  spotify.py  windowsapi.py
src/skills/helpers/: spotify_recommend.deprecated.py
src/skills/web/: __init__.py  browser.py  controller.py
src/tts/: base.py  deepinfra.py  sapi5.py
src/vaf/: agent.py  config.py  context.py  utils.py
src/vaf/asr/: _base.py  mistral.py
src/vaf/llm/: _base.py  openrouter.py
src/vaf/skills/: _skill_usage.py  dateandtime.py  retrieve.py  windowsapi.py
src/vaf/skills/calendar_ics/: __init__.py  models.py
src/vaf/skills/web/: __init__.py  banned.py  scraper.py
src/vaf/tts/: asynccom.py  deepinfra.py
tests/: test_context.py
