[project]
name = "vaf-alpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cerebras>=0.0.1",
    "comtypes>=1.4.16",
    "httpx[http2]>=0.28.1",
    "mistralai>=2.1.3",
    "numpy>=2.4.3",
    "orjson>=3.11.8",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]
